--- a/project.json
+++ b/project.json
@@ -15,6 +15,8 @@
         "src/GameLayer.js",
         "src/Raft.js",
         "src/Wave.js",
-        "src/River.js"
+        "src/River.js",
+        "src/Wave2.js",
+        "src/Rock.js"
     ]
 }
