--- a/project.json
+++ b/project.json
@@ -20,6 +20,7 @@
         "src/Enemy.js",
         "src/Bullet.js",
         "src/CollisionDetect.js",
-        "src/heart.js"
+        "src/heart.js",
+        "src/Island.js"
     ]
 }
